--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ owner:
 background: 
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   
+google_analytics:	UA-55201140-1
 google_verify:
 bing_verify:         
 
