included linkedin profile

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ owner:
   email:          bart.szulc.qa@gmail.com
   twitter:        BartSzulc
   github:     	  bartszulc-qa
+  linkedin:		  bartszulc
 
 # Background image to be tiled on all pages
 background: 
