--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ disqus_shortname: bartqa
 reading_time:     true
 words_per_minute: 200
 #Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://bartszulc-qa.github.io/
+url:              http://bartszulc-qa.github.io/blog
 
 # Owner/author information
 owner:
