--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description:      Bart's thoughts on testing
 disqus_shortname: bartqa
 reading_time:     true
 words_per_minute: 200
-url:              http://bartszulc-qa.github.io/blog
+url:              https://bartszulc-qa.github.io/blog
 
 # Owner/author information
 owner:
