--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description:      Bart's thoughts on testing
 disqus_shortname: bartqa
 reading_time:     true
 words_per_minute: 200
-url:              https://bartszulc-qa.github.io/blog
+url:              #https://bartszulc-qa.github.io/blog
 
 # Owner/author information
 owner:
@@ -16,12 +16,12 @@ owner:
   linkedin:		  bartszulc
 
 # Background image to be tiled on all pages
-background: 
+background:
 
 # Analytics and webmaster tools stuff goes here
 google_analytics:	UA-55201140-1
 google_verify:
-bing_verify:         
+bing_verify:
 
 # Links to include in top navigation
 # For external links add external: true
